--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
     <script src="./bower_components/angular/angular.js"></script>
     <script src="./bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="./bower_components/react/react.js"></script>
+    <link rel="stylesheet" href="./bower_components/skeleton/css/skeleton.css"/>
+
     <script src="./main.js"></script>
 </head>
 
